--- a/Individual project program/Cellular Automaton/Cellular Automaton/MainWindow.xaml
+++ b/Individual project program/Cellular Automaton/Cellular Automaton/MainWindow.xaml
@@ -2,18 +2,18 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-        Title="MainWindow" MinHeight="650" MinWidth="1000" Height="650" Width="1000" Loaded="MetroWindow_Loaded">
+        Title="MainWindow" MinHeight="650" MinWidth="1000" Height="650" Width="1100" Loaded="MetroWindow_Loaded">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition />
-            <ColumnDefinition Width="300"/>
+            <ColumnDefinition Width="400"/>
         </Grid.ColumnDefinitions>
         <Grid Grid.Column="0" Background="Aquamarine" Opacity="0.6">
 
 
-            <ScrollViewer Margin="0,0,8,80" Background="Black"  HorizontalScrollBarVisibility="Auto">
+            <ScrollViewer IsDeferredScrollingEnabled="True" Margin="0,0,8,80" Background="Black"  HorizontalScrollBarVisibility="Auto">
                 <Border Name="GridBorder" BorderBrush="White" BorderThickness="3" Width="500" Height="500">
-            <Grid  Name="LifeGrid" AllowDrop="True" Width="500" Height="500">
+            <Grid    Name="LifeGrid" AllowDrop="True" Width="500" Height="500" MouseMove="LifeGrid_MouseMove">
                 <Grid.Resources>
                     <Style TargetType="{x:Type Rectangle}">
                         <Setter Property="Opacity" Value="{Binding Path=IsAlive}" />
@@ -29,25 +29,76 @@
             
             <Grid Height="80" VerticalAlignment="Bottom">
                 <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="100" />
                     <ColumnDefinition Width="2*" />
                     <ColumnDefinition />
                 </Grid.ColumnDefinitions>
-                <Slider Name="zoomSlider" VerticalAlignment="Center" Margin="10" Thumb.DragCompleted="zoomSlider_DragCompleted"  Value="1" Minimum="1" Maximum="5"></Slider>
+                <Label HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Foreground="Black" FontSize="20" FontWeight="Bold">Zoom:</Label>
+                <Slider Grid.Column="1" Name="zoomSlider" VerticalAlignment="Center" Margin="10" Thumb.DragCompleted="zoomSlider_DragCompleted"  Value="1" Minimum="1" Maximum="5"></Slider>
             </Grid>
         </Grid>
-        <Grid Background="Aqua" Opacity="0.2" Grid.Column="1">
+        <Grid Background="#767785" Opacity="1" Grid.Column="1">
             <Grid.RowDefinitions>
                 <RowDefinition Height="60" />
                 <RowDefinition Height="60" />
+                <RowDefinition Height="500" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="2*"/>
-                <ColumnDefinition Width="1*"/>
+                <ColumnDefinition Width="2*"/>
             </Grid.ColumnDefinitions>                
             <Button Name="StartButton" Click="StartButton_Click" FontSize="25" Foreground="White"> Start</Button>
             <Button Name="ClearButton" Click="ClearButton_Click" FontSize="25" Foreground="White" Grid.Row="1">Clear</Button>
-            <Label Grid.Column="1"  > Time </Label>
-            <TextBox Name="timeTextBox" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="30" Text="150"></TextBox>
+            
+            <StackPanel Grid.Row="0" Grid.Column="1" Orientation="Horizontal">
+                <Label Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="30" Foreground="Black"  >Steps:</Label>
+                <TextBox  Name="numberOfSteps" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="30" Text="0" Height="50" Width="60"></TextBox>
+                <StackPanel Margin="2,6,0,0">
+                    <Button Width="40">▲</Button>
+                    <Button >▼</Button>
+                </StackPanel>
+            </StackPanel>
+            <StackPanel Grid.Column="1" Grid.Row="1" Orientation="Horizontal">
+                <Label Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="30" Padding="5,0,14,0" Foreground="Black" >Time:</Label>
+                <TextBox Grid.Row="1" Name="timeTextBox" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="30" Text="150"></TextBox>
+                <StackPanel Margin="2,6,0,0">
+                    <Button Name="addMS" Click="addMS_Click" Width="40">▲</Button>
+                    <Button Name="lowerMS" Click="lowerMS_Click" >▼</Button>
+                </StackPanel>
+            </StackPanel>
+            
+            <Grid Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="50" />
+                    <RowDefinition Height="60" />
+                    <RowDefinition Height="255"  />
+                    <RowDefinition />
+                    <RowDefinition />
+                    
+                </Grid.RowDefinitions>
+                <Label HorizontalAlignment="Center" FontSize="30" Foreground="Black"  >Select enviroment</Label>
+               
+                    <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Top">
+                    <CheckBox Name="FourPNHCHeckBox" Click="FourPNHCHeckBox_Click"  FontSize="12" Foreground="Black" Padding="0" Margin="10" Content="4">
+                        <CheckBox.LayoutTransform>
+                            <ScaleTransform ScaleX="2" ScaleY="2" />
+                        </CheckBox.LayoutTransform>
+                    </CheckBox>
+                    <CheckBox  Name="EightPNHCHeckBox" Click="EightPNHCHeckBox_Click" FontSize="12" Foreground="Black" Padding="0" Margin="10" Content="8">
+                        <CheckBox.LayoutTransform>
+                            <ScaleTransform ScaleX="2" ScaleY="2" />
+                        </CheckBox.LayoutTransform>
+                    </CheckBox>
+                    <CheckBox Name="TwentyFivePNHCHeckBox" Click="TwentyFivePNHCHeckBox_Click" FontSize="12" Foreground="Black" Padding="0" Margin="10" Content="24">
+                        <CheckBox.LayoutTransform>
+                            <ScaleTransform ScaleX="2" ScaleY="2" />
+                        </CheckBox.LayoutTransform>
+                    </CheckBox>
+                </StackPanel>
+                <Grid Name="enviromentGrid" Grid.Row="2"  Height="250" Width="250" VerticalAlignment="Top"></Grid>
+                <ComboBox Name="ruleComboBox" Grid.Row="3" Height="50" VerticalAlignment="Top" ItemsSource="{Binding ruleNameList}" Text="{Binding value}" Margin="20,0" ></ComboBox>
+                <Button Name="EditAddRuleButton" Click="EditAddRuleButton_Click" FontSize="20" Grid.Row="4" Margin="5">Edit/Add rule</Button>
+            </Grid>
         </Grid>
     </Grid>
 </Controls:MetroWindow>
